syntax = "proto3";

package pb;

option go_package = "github.com/che1nov/tea-shop/shared/pb";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}
  rpc GetOrder(GetOrderRequest) returns (Order) {}
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (Order) {}
}

message OrderItem {
  int64 good_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message Order {
  int64 id = 1;
  int64 user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  double total_price = 5;
  string address = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
  string address = 3;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message UpdateOrderStatusRequest {
  int64 order_id = 1;
  string status = 2;
}
